--- a/Views/Details/ApplicationDataExchange.cshtml
+++ b/Views/Details/ApplicationDataExchange.cshtml
@@ -4,29 +4,17 @@
 @{
 }
 
+<h3 style="text-align:center"><strong>Application Data Exchange</strong></h3>
+<br/>
+<img src="~/images/RecordProtocol.jpg" alt="Record Protocol" usemap="#furtherdetails" style="width:60%;height:60%"/>
+<br />
+<br />
+<img src="~/images/header.jpg" alt="Package format" style="width:40%;height:40%" />
 
-<div class="parent">
-    <div class="left">
-        <img src="~/images/tls.jpg" alt="flow chart" usemap="#furtherdetails" style="width:80%;height:80%" />
-
-        <map name="furtherdetails" id="furtherdetails"></map>
-    </div>
-    <div class="right">
-        <h3><strong>Application Data Exchange</strong></h3>
-    </div>
+<div>
+    <a href="/Details/Index" >
+        <strong>
+            &larr; Back to the handshake process
+        </strong>
+    </a>
 </div>
-
-<style>
-    .parent {
-        display: flex;
-    }
-
-    .left {
-        margin-right: 10px;
-    }
-
-    .right {
-        flex: 1;
-    }
-</style>
-
