--- a/Views/Details/Clientbye.cshtml
+++ b/Views/Details/Clientbye.cshtml
@@ -4,6 +4,8 @@
 @{
 }
 
+    
+
 <h3><strong>Client Bye</strong></h3>
 
 <ul>
@@ -14,3 +16,11 @@
     Finally, the client sends an authenticated and encrypted Finished message, containing a hash and MAC over the previous handshake messages.
     The server will attempt to decrypt the client's Finished message and verify the hash and MAC. If the decryption or verification fails, the handshake is considered to have failed and the connection should be torn down.
 </ul>
+
+<div>
+    <a href="/Details/Index">
+        <strong>
+            &lArr; Back
+        </strong>
+    </a>
+</div>
