--- a/Views/Details/Clienthello.cshtml
+++ b/Views/Details/Clienthello.cshtml
@@ -4,6 +4,7 @@
 @{
 }
 
+
 <h3><strong>Client Hello</strong></h3>
 
 <ul>
@@ -13,4 +14,11 @@
     <li>Session ID, if the client is attempting to perform a resumed handshake;</li>
     <li>A list of supported application protocols, such as HTTP/2, if the client can use Application-Layer Protocol Negotiation.</li>
 </ul>
-        
+
+<div>
+    <a href="/Details/Index">
+        <strong>
+            &lArr; Back
+        </strong>
+    </a>
+</div>       
