--- a/Views/Details/Serverbye.cshtml
+++ b/Views/Details/Serverbye.cshtml
@@ -4,6 +4,8 @@
 @{
 }
 
+    
+
 <h3><strong>Server Bye</strong></h3>
 
 <ul>
@@ -11,3 +13,11 @@
     The server sends its authenticated and encrypted Finished message.
     The client performs the same decryption and verification procedure as the server did in the previous step.
 </ul>
+
+<div>
+    <a href="/Details/Index">
+        <strong>
+            &lArr; Back
+        </strong>
+    </a>
+</div>
