--- a/Views/Details/Index.cshtml
+++ b/Views/Details/Index.cshtml
@@ -5,34 +5,27 @@
     ViewData["title"] = "index";
 }
 
-<script type="text/javascript">
-    $(document).ready(function () {
-        $("hide").click(function () {
-            $("Clienthello").hide();
-        });
 
-        $("show").click(function () {
-            $("Clienthello").show();
-        });
-
-    });
-</script>
 
 <div class="parent">
-    <div class="left">
-        <img src="~/images/tls.jpg" alt="flow chart" usemap="#furtherdetails" style="width:80%;height:80%"/>
-
+    <div class="content" style="width:50%;float:left">
+        <img src="~/images/tls.jpg" alt="flow chart" usemap="#furtherdetails" style="width:80%;height:80%" />
         <map name="furtherdetails" id="furtherdetails"></map>
     </div>
-    <div class="right">
+    <div class="content" style="width:50%;float:left;height:auto">
         <h3><strong>Handshake</strong></h3>
+        <!--
+    <h4><a asp-controller="Details" asp-action="Clienthello" target="contentdisplayer">Client Hello</a></h4>
+    <iframe name="contentdisplayer" style="height:200%"></iframe>
+                -->
+        <h4><a asp-controller="Details" asp-action="Clienthello">Client Hello</a></h4>
 
-        <h4><a asp-controller="Details" asp-action="Clienthello" target="contentdisplayer">Client Hello</a></h4>
-        <h4><a asp-controller="Details" asp-action="Serverhello" target="contentdisplayer">Server Key Exchange</a></h4>
-        <h4><a asp-controller="Details" asp-action="Clientbye" target="contentdisplayer">Client-change cipher spec & Client Key Exchange</a></h4>
-        <h4><a asp-controller="Details" asp-action="Serverbye" target="contentdisplayer">Server-change cipher spec</a></h4>
+        <h4><a asp-controller="Details" asp-action="Serverhello">Server Hello</a></h4>
+        <h4><a asp-controller="Details" asp-action="Servercert">Server Key Exchange & cert</a></h4>
+        <h4><a asp-controller="Details" asp-action="Clientbye">Client-change cipher spec & Client Key Exchange</a></h4>
+        <h4><a asp-controller="Details" asp-action="Serverbye">Server-change cipher spec</a></h4>
 
-        <iframe name="contentdisplayer" style="width:100%;height:40%"></iframe>
+
         <p>
             At this point, the "handshake" is complete and the application protocol is enabled, with content type of 23. Application messages exchanged between client and server will also be authenticated and optionally encrypted exactly like in their Finished message. Otherwise, the content type will return 25 and the client will not authenticate.
         </p>
@@ -42,7 +35,7 @@
     </div>
 </div>
 
-<style>
+<!--<style>
     .parent{
         display: flex;
     }
@@ -54,5 +47,18 @@
         flex: 1;
     }
 
-</style>
+</style>-->
+<!--
+    <script type="text/javascript">
+    $(document).ready(function () {
+        $("hide").click(function () {
+            $("Clienthello").hide();
+        });
 
+        $("show").click(function () {
+            $("Clienthello").show();
+        });
+
+    });
+</script>
+-->
