--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,148 +2,171 @@
     ViewData["Title"] = "Home Page";
 }
 <br />
-<div id="ssl" class="carousel slide" data-ride="carousel" data-interval="6000" style="width:50%;height:50%;float:left">
-    <ol class="carousel-indicators">
-        <li data-target="#ssl" data-slide-to="0" class="active"></li>
-        <li data-target="#ssl" data-slide-to="1"></li>
-        <li data-target="#ssl" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner3.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    <a style="color:white">
-                        <strong>SSL 1.0</strong>
-                    </a>
-                </p>
-                <p9>
-                    Unpublished due to the serious security flaws.
-                </p9>
+
+<div id="sslpicture" class="ssltop" style="width:50%;float:left;border:5px solid green;">
+    <div id="ssl" class="carousel slide" data-ride="carousel" data-interval="6000" >
+        <ol class="carousel-indicators">
+            <li data-target="#ssl" data-slide-to="0" class="active"></li>
+            <li data-target="#ssl" data-slide-to="1"></li>
+            <li data-target="#ssl" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img src="~/images/banner3.svg" alt="Visual Studio" class="img-responsive" />
+                <div class="carousel-caption" role="option">
+                    <p>
+                        <a style="color:white">
+                            <strong>SSL 1.0</strong>
+                        </a>
+                    </p>
+                    <p9>
+                        Unpublished due to the serious security flaws.
+                    </p9>
+                </div>
+            </div>
+            <div class="item">
+                <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
+                <div class="carousel-caption" role="option">
+                    <p>
+                        <a href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409" style="color:white">
+                            <strong>SSL 2.0</strong>
+                        </a>
+                    </p>
+                    <p9>
+                        From 1995 to 2011
+                    </p9>
+                </div>
+            </div>
+            <div class="item">
+                <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
+                <div class="carousel-caption" role="option">
+                    <p>
+                        <a href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409" style="color:white">
+                            <strong>SSL 3.0</strong>
+                        </a>
+                    </p>
+                    <p9>
+                        From 1996 to 2015
+                    </p9>
+                </div>
             </div>
         </div>
-        <div class="item">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    <a href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409" style="color:white">
-                        <strong>SSL 2.0</strong>
-                    </a>
-                </p>
-                <p9>
-                    From 1995 to 2011
-                </p9>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    <a href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409" style="color:white">
-                        <strong>SSL 3.0</strong>
-                    </a>
-                </p>
-                <p9>
-                    From 1996 to 2015
-                </p9>
-            </div>
-        </div>
+        <a class="left carousel-control" href="#ssl" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#ssl" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-    <a class="left carousel-control" href="#ssl" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#ssl" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
 </div>
-<br />
-<div id="sslintroduction" style="width:540px;height:280px;float:right">
+
+<div id="sslintroduction" class="ssltop" style="width:50%;float:right;border:5px solid green;">
     <h3>Secure Sockets Layer</h3>
 </div>
 
 
-<br />
-<div id="tlsintroduction" style="width:540px;height:280px;float:left">
+<style>
+    .ssltop{/*
+        padding-bottom:200px;
+        margin-bottom:100px;*/
+    }
+    #sslpicture,#sslintroduction{
+        padding: 10px;
+        display: table-cell;
+        border: 1px solid #f40;
+    }
+    #sslintroduction{
+        margin-bottom:120px;
+    }
+    
+</style>
+
+
+
+<div id="tlsintroduction" class="tlsbottom" style="width:50%;float:left;border:5px solid green;">
     <h3>Transport Layer Security</h3>
     <ul>
         <li><a href="tls">Comparison</a></li>
         <li><a href="tls/attack">Attack</a></li>
     </ul>
 </div>
-<br />
-<div id="tls" class="carousel slide" data-ride="carousel" data-interval="6000" style="width:50%;height:50%;float:right">
-    <ol class="carousel-indicators">
-        <li data-target="#tls" data-slide-to="0" class="active"></li>
-        <li data-target="#tls" data-slide-to="1"></li>
-        <li data-target="#tls" data-slide-to="2"></li>
-        <li data-target="#tls" data-slide-to="3"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    <a href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409" style="color:white">
-                        <strong>TLS 1.0</strong>
-                    </a>
-                </p>
-                <p9>
-                    From 1999 to 2020 (expected)
-                </p9>
+
+<div class="tlsbottom" style="width:50%;float:right;border:5px solid green;">
+    <div id="tls" class="carousel slide" data-ride="carousel" data-interval="6000" >
+        <ol class="carousel-indicators">
+            <li data-target="#tls" data-slide-to="0" class="active"></li>
+            <li data-target="#tls" data-slide-to="1"></li>
+            <li data-target="#tls" data-slide-to="2"></li>
+            <li data-target="#tls" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
+                <div class="carousel-caption" role="option">
+                    <p>
+                        <a href="tls/algorithm" style="color:white">
+                            <strong>TLS 1.0</strong>
+                        </a>
+                    </p>
+                    <p9>
+                        From 1999 to 2020 (expected)
+                    </p9>
+                </div>
+            </div>
+            <div class="item">
+                <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
+                <div class="carousel-caption" role="option">
+                    <p>
+                        <a href="tls/algorithm#tls1.1" style="color:white">
+                            <strong>TLS 1.1</strong>
+                        </a>
+                    </p>
+                    <p9>
+                        From 2006 to 2020 (expected)
+                    </p9>
+                </div>
+            </div>
+            <div class="item">
+                <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
+                <div class="carousel-caption" role="option">
+                    <p>
+                        <a href="http://www.google.com" style="color:white">
+                            <strong>TLS 1.2</strong>
+                        </a>
+                    </p>
+                    <p9>
+                        Since 2008
+                    </p9>
+                </div>
+            </div>
+            <div class="item">
+                <img src="~/images/banner2.svg" alt="Microsoft Azure" class="img-responsive" />
+                <div class="carousel-caption" role="option">
+                    <p>
+                        <a href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409" style="color:white">
+                            <strong>TLS 1.3</strong>
+                        </a>
+                    </p>
+                    <p9>
+                        Since 2018
+                    </p9>
+                </div>
             </div>
         </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    <a href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409" style="color:white">
-                        <strong>TLS 1.1</strong>
-                    </a>
-                </p>
-                <p9>
-                    From 2006 to 2020 (expected)
-                </p9>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    <a href="http://www.google.com" style="color:white">
-                        <strong>TLS 1.2</strong>
-                    </a>
-                </p>
-                <p9>
-                    Since 2008
-                </p9>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    <a href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409" style="color:white">
-                        <strong>TLS 1.3</strong>
-                    </a>
-                </p>
-                <p9>
-                    Since 2018
-                </p9>
-            </div>
-        </div>
+        <a class="left carousel-control" href="#tls" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#tls" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-    <a class="left carousel-control" href="#tls" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#tls" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
 </div>
 
+<h3><a href="/Home/Example"><strong>Example: Visit www.github.com</strong></a></h3>
 
 <div class="row">
     <div class="col-md-3">
