--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--自适应，在打开时页面适应显示器-->
     <title>@ViewData["Title"] - SSLTLSWeb</title>
 
     <environment include="Development">
