--- a/Views/Details/Clientbye.cshtml
+++ b/Views/Details/Clientbye.cshtml
@@ -20,7 +20,7 @@
 <div>
     <a href="/Details/Index">
         <strong>
-            &lArr; Back
+            &larr; Back
         </strong>
     </a>
 </div>
