--- a/Views/Details/Index.cshtml
+++ b/Views/Details/Index.cshtml
@@ -30,6 +30,10 @@
             At this point, the "handshake" is complete and the application protocol is enabled, with content type of 23. Application messages exchanged between client and server will also be authenticated and optionally encrypted exactly like in their Finished message. Otherwise, the content type will return 25 and the client will not authenticate.
         </p>
         <a asp-controller="Details" asp-action="ApplicationDataExchange">Learn more about <strong>Application Data Exchange</strong></a>
+        <p>
+            <a href="/Home/Example">&rArr; For a more detailed example.</a>
+        </p>
+        
 
 
     </div>
