--- a/Views/Home/Example.cshtml
+++ b/Views/Home/Example.cshtml
@@ -12,7 +12,10 @@
 
 
 <p>
-    We have wireshark as the capturing tool.The IP address of <u>github.com</u> is <u>52.74.223.119</u>. The cipher exchang method is <a href="https://en.wikipedia.org/wiki/Kerberos_(protocol)">Kerberos</a>, and the other two IP addresses are <u>151.101.8.133</u> and <u>185.199.109.154</u>. <br />
+    We had wireshark as the capturing tool. As we visited the <u>www.github.com</u>, the web packages were caught and the content was analized to segments.
+</p>
+<p>
+    The IP address of <u>www.github.com</u> is <u>52.74.223.119</u>. The cipher exchang method is <a href="https://en.wikipedia.org/wiki/Kerberos_(protocol)">Kerberos</a>, and the other two IP addresses are <u>151.101.8.133</u> and <u>185.199.109.154</u>. <br />
 </p>
 
 <h5>
