--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
 </head>
-<body>
+<body style="background-color:#E1FCE0">
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Details" asp-action="Index" class="navbar-brand">Details</a>
+                <a asp-area="" asp-controller="Details" asp-action="Index" class="navbar-brand">Work Flow</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
