--- a/Views/Details/ApplicationDataExchange.cshtml
+++ b/Views/Details/ApplicationDataExchange.cshtml
@@ -11,6 +11,8 @@
 <br />
 <img src="~/images/header.jpg" alt="Package format" style="width:40%;height:40%" />
 
+<img src="~/images/protocolstack.jpg" />
+
 <div>
     <a href="/Details/Index" >
         <strong>
