--- a/Views/Details/Clienthello.cshtml
+++ b/Views/Details/Clienthello.cshtml
@@ -18,7 +18,7 @@
 <div>
     <a href="/Details/Index">
         <strong>
-            &lArr; Back
+            &larr; Back
         </strong>
     </a>
 </div>       
