--- a/Views/Details/Serverbye.cshtml
+++ b/Views/Details/Serverbye.cshtml
@@ -17,7 +17,7 @@
 <div>
     <a href="/Details/Index">
         <strong>
-            &lArr; Back
+            &larr; Back
         </strong>
     </a>
 </div>
