--- a/Views/Details/Servercert.cshtml
+++ b/Views/Details/Servercert.cshtml
@@ -16,7 +16,7 @@
 <div>
     <a href="/Details/Index">
         <strong>
-            &lArr; Back
+            &larr; Back
         </strong>
     </a>
 </div>
