--- a/Views/Details/Serverhello.cshtml
+++ b/Views/Details/Serverhello.cshtml
@@ -22,7 +22,7 @@
 <div>
     <a href="/Details/Index">
         <strong>
-            &lArr; Back
+            &larr; Back
         </strong>
     </a>
 </div>
