--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -1,6 +1,16 @@
 ﻿@{
     ViewData["Title"] = "Contact";
 }
+
+    <style>
+        #Co {
+            font-size: 14px;
+            font-weight: bold; /*字体粗细*/
+            background-color: #E1FCE0;
+            color: black;
+        }
+    </style>
+
 <h2>@ViewData["Title"]</h2>
 <h4>@ViewData["Author"]</h4>
 
