--- a/Views/Home/Example.cshtml
+++ b/Views/Home/Example.cshtml
@@ -4,6 +4,15 @@
 @{
 }
 
+    <style>
+        #Ex {
+            font-size: 14px;
+            font-weight: bold; /*字体粗细*/
+            background-color: #E1FCE0;
+            color: black;
+        }
+    </style>
+
     <h4>
         <strong>
             Click <a href="~/images/package.zip" download="package.zip">here</a> to get the example file.
