--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,10 +4,15 @@
 <br />
 
 
-
-
 <!--background-image: url('../../images/back3.jpg');-->
 
+<style>
+    #Main {
+        font-weight: bolder; /*字体粗细*/
+        background-color: #E1FCE0;
+        color: black;
+    }
+</style>
 
 
 <body>
@@ -22,12 +27,10 @@
             <div class="item active">
                 <img src="~/images/Slide1.JPG" alt="ASP.NET" class="img-responsive" />
                 <div class="carousel-caption" role="option">
-                    <p>
-                        <a href="tls/algorithm" style="color:black">
-                            <strong>TLS 1.0</strong>
-                        </a>
+                    <p style="color:black">
+                        <strong>TLS 1.0</strong>
                     </p>
-                    <p9 style="color:#999999">
+                    <p9 style="color:black">
                         From 1999 to 2020 (expected)
                     </p9>
                 </div>
@@ -35,10 +38,8 @@
             <div class="item">
                 <img src="~/images/Slide5.JPG" alt="Visual Studio" class="img-responsive" />
                 <div class="carousel-caption" role="option">
-                    <p>
-                        <a href="tls/algorithm#tls1.1" style="color:black">
-                            <strong>TLS 1.1</strong>
-                        </a>
+                    <p style="color:black">
+                        <strong>TLS 1.1</strong>
                     </p>
                     <p9 style="color:black">
                         From 2006 to 2020 (expected)
@@ -48,12 +49,10 @@
             <div class="item">
                 <img src="~/images/Slide3.JPG" alt="Microsoft Azure" class="img-responsive" />
                 <div class="carousel-caption" role="option">
-                    <p>
-                        <a href="tls/algorithm#tls1.2" style="color:black">
-                            <strong>TLS 1.2</strong>
-                        </a>
+                    <p style="color:black">
+                        <strong>TLS 1.2</strong>
                     </p>
-                    <p9 style="color:black;">
+                    <p9 style="color:black">
                         Since 2008
                     </p9>
                 </div>
@@ -61,12 +60,10 @@
             <div class="item">
                 <img src="~/images/Slide4.JPG" alt="Microsoft Azure" class="img-responsive" />
                 <div class="carousel-caption" role="option">
-                    <p>
-                        <a href="tls/algorithm#tls1.3" style="color:black">
-                            <strong>TLS 1.3</strong>
-                        </a>
+                    <p style="color:black">
+                        <strong>TLS 1.3</strong>
                     </p>
-                    <p9 style="color:#1F4E79">
+                    <p9 style="color:black">
                         Since 2018
                     </p9>
                 </div>
