--- a/Views/Home/Reference.cshtml
+++ b/Views/Home/Reference.cshtml
@@ -1,6 +1,16 @@
 ﻿@{
     ViewData["Title"] = "Reference";
 }
+
+    <style>
+        #Re {
+            font-size: 14px;
+            font-weight: bold; /*字体粗细*/
+            background-color: #E1FCE0;
+            color: black;
+        }
+    </style>
+
 <h2>@ViewData["Title"]</h2>
 
 <p>Use this area to provide additional information.</p>
