--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,24 +16,31 @@
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
+    <link type="text/css" rel="stylesheet" href="~/css/navigate.css"/>
+    <script type="text/javascript" src="~/js/site.js"></script>
 </head>
 <body style="background-color:#E1FCE0">
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
+    <nav class="navbar navbar-inverse navbar-fixed-top" style="border:none">
+        <div class="container" >
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Details" asp-action="Index" class="navbar-brand">Work Flow</a>
+                <a id="Main" asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Home</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>  
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Reference">Reference</a></li>
+                    <li><a class="guide" id="WF" asp-area="" asp-controller="Details" asp-action="Index">Work Flow</a></li>
+                    <li><a class="guide" id="Al" asp-area="" asp-controller="Home" asp-action="Algorithm">Algorithm</a></li>
+                    <li><a class="guide" id="Ex" asp-area="" asp-controller="Home" asp-action="Example">Example</a></li>
+                    <li><a class="guide" id="Co" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a class="guide" id="Re" asp-area="" asp-controller="Home" asp-action="Reference">Reference</a></li>
+                    
                 </ul>
             </div>
         </div>
@@ -73,3 +80,4 @@
     @RenderSection("Scripts", required: false)
 </body>
 </html>
+
