--- a/Views/Home/Example.cshtml
+++ b/Views/Home/Example.cshtml
@@ -13,11 +13,11 @@
         }
     </style>
 
-    <h4>
+    <h3>
         <strong>
-            Click <a href="~/images/package.zip" download="package.zip">here</a> to get the example file.
+            Click <a href="~/images/package.zip" download="package.zip"><u>here</u></a> to get the example file.
         </strong>
-    </h4>
+    </h3>
 
 
 <p>
@@ -27,11 +27,11 @@
     The IP address of <u>www.github.com</u> is <u>52.74.223.119</u>. The cipher exchang method is <a href="https://en.wikipedia.org/wiki/Kerberos_(protocol)">Kerberos</a>, and the other two IP addresses are <u>151.101.8.133</u> and <u>185.199.109.154</u>. <br />
 </p>
 
-<h5>
+<h4>
     <strong>
         Take the communication with <u>185.199.109.154</u> for detailed <a style="color:red">handshake</a> process:
     </strong>
-</h5>
+</h4>
 
 <div>
     <img src="~/images/handshake.JPG" class="img-responsive"/>
@@ -79,11 +79,11 @@
     </ol>
 </div>
 
-<h5>
+<h4>
     <strong>
         Take the communication with <u>52.74.223.119</u> for detailed <a style="color:red">Application Data Exchange</a> process:
     </strong>
-</h5>
+</h4>
 
 <br />
 
