--- a/Views/Home/algorithm.cshtml
+++ b/Views/Home/algorithm.cshtml
@@ -50,7 +50,7 @@
         <td>DHE-RSA(forward secrecy)</td>
         <td>&radic;</td>
         <td>AES CBC</td>
-        <td>&nbsp;</td>
+        <td>Depends on Mitigations &radic;</td>
         <td>HMAC-SHA256/384</td>
         <td>&nbsp;</td>
     </tr>
@@ -66,7 +66,7 @@
         <td>ECDH-RSA(forward secrecy)</td>
         <td>&radic;</td>
         <td>Camellia CBC</td>
-        <td>&nbsp;</td>
+        <td>Depends on Mitigations &radic;</td>
         <td>GOST 28147-89 IMIT</td>
         <td>&radic;</td>
     </tr>
@@ -82,7 +82,7 @@
         <td>DHE-DSS(forward secrecy)</td>
         <td>&radic;</td>
         <td>ARIA CBC</td>
-        <td>&nbsp;</td>
+        <td>Depends on Mitigations &radic;</td>
         <td>&nbsp;</td>
         <td>&nbsp;</td>
     </tr>
@@ -90,7 +90,7 @@
         <td>ECDH-ECDSA</td>
         <td>&radic;</td>
         <td>SEED CBC</td>
-        <td>&nbsp;</td>
+        <td>Depends on Mitigations &radic;</td>
         <td>&nbsp;</td>
         <td>&nbsp;</td>
     </tr>
@@ -222,7 +222,7 @@
         <td>DHE-RSA(forward secrecy)</td>
         <td>&radic;</td>
         <td>AES CBC</td>
-        <td>&nbsp;</td>
+        <td>Depends on Mitigations &radic;</td>
         <td>HMAC-SHA256/384</td>
         <td>&nbsp;</td>
     </tr>
@@ -238,7 +238,7 @@
         <td>ECDH-RSA(forward secrecy)</td>
         <td>&radic;</td>
         <td>Camellia CBC</td>
-        <td>&nbsp;</td>
+        <td>Depends on Mitigations &radic;</td>
         <td>GOST 28147-89 IMIT</td>
         <td>&radic;</td>
     </tr>
@@ -254,7 +254,7 @@
         <td>DHE-DSS(forward secrecy)</td>
         <td>&radic;</td>
         <td>ARIA CBC</td>
-        <td>&nbsp;</td>
+        <td>Depends on Mitigations &radic;</td>
         <td>&nbsp;</td>
         <td>&nbsp;</td>
     </tr>
@@ -262,7 +262,7 @@
         <td>ECDH-ECDSA</td>
         <td>&radic;</td>
         <td>SEED CBC</td>
-        <td>&nbsp;</td>
+        <td>Depends on Mitigations &radic;</td>
         <td>&nbsp;</td>
         <td>&nbsp;</td>
     </tr>
@@ -394,7 +394,7 @@
         <td>DHE-RSA(forward secrecy)</td>
         <td>&radic;</td>
         <td>AES CBC</td>
-        <td>&nbsp;</td>
+        <td>Depends on Mitigations &radic;</td>
         <td>HMAC-SHA256/384</td>
         <td>&radic;</td>
     </tr>
@@ -410,7 +410,7 @@
         <td>ECDH-RSA(forward secrecy)</td>
         <td>&radic;</td>
         <td>Camellia CBC</td>
-        <td>&nbsp;</td>
+        <td>Depends on Mitigations &radic;</td>
         <td>GOST 28147-89 IMIT</td>
         <td>&radic;</td>
     </tr>
@@ -426,7 +426,7 @@
         <td>DHE-DSS(forward secrecy)</td>
         <td>&radic;</td>
         <td>ARIA CBC</td>
-        <td>&nbsp;</td>
+        <td>Depends on Mitigations &radic;</td>
         <td>&nbsp;</td>
         <td>&nbsp;</td>
     </tr>
@@ -434,7 +434,7 @@
         <td>ECDH-ECDSA</td>
         <td>&radic;</td>
         <td>SEED CBC</td>
-        <td>&nbsp;</td>
+        <td>Depends on Mitigations &radic;</td>
         <td>&nbsp;</td>
         <td>&nbsp;</td>
     </tr>
